--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_PATH=$NODE_PATH:./shared node --harmony .",
+    "dev": "NODE_PATH=$NODE_PATH:./shared node .",
     "start": "npm run dev & webpack-dev-server --progress --color",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,11 +27,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "eslint": "^3.12.2",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.8.0",
     "react-hot-loader": "^1.3.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
