--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["es2015", "stage-0", "react"]
+  "presets": ["es2015", "stage-0", "react"],
+  /*TODO: setup this and remove query presets react-hmre from webpack config*/
+  /*"env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }*/
 }
