added sass with css modules used require extension hook at server for scss files

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_PATH=$NODE_PATH:./shared node .",
-    "start": "npm run dev",
+    "clean": "rm -rf dist",
+    "build:webpack": "NODE_ENV=production webpack production",
+    "build": "npm run clean && npm run build:webpack",
+    "dev-server": "NODE_PATH=$NODE_PATH:./shared NODE_ENV=development node .",
+    "start": "npm run dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -38,9 +41,14 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.1.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^1.16.2",
